fixed the gapping problem between image and card items

--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,8 @@ h1 {
 }
 
 .card-items {
+   margin-top: -5px;
    padding: 1.5em;
-
    background-color: #002930;
 }
 
